Prevent mobile from jumping on address bar hide.

--- a/scss/layout/_mobile.scss
+++ b/scss/layout/_mobile.scss
@@ -12,6 +12,8 @@
 		min-width: 90vw;
 		width: 90vw;
 
+		margin-top: 50px;
+
 		& .content-skills-section{
 			min-width: 100%;
 			width: 100%;
